fix(component): Added styles to host.less to move it out of the viewport when not visible (Tooltip)
affects: ak-tooltip

--- a/packages/ak-tooltip/src/host.less
+++ b/packages/ak-tooltip/src/host.less
@@ -10,7 +10,13 @@
 .ak-tooltip,
 ak-tooltip {
   display: none;
+  // we remove pointer events to prevent the tooltip from getting in the way of hovering
   pointer-events: none;
+  // and hide the tooltip outside of the viewport by default to prevent flashes of old positions
+  // when next appearing
+  top: -999em;
+  left: -999em;
+  position: absolute;
 
   &[visible] {
     display: inline-block;
